--- a/merge.html
+++ b/merge.html
@@ -13,11 +13,12 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <nav style="margin-bottom: 20px; text-align:center; color: #007bff;">
-    <a href="index.html" style="color: #007bff; text-decoration;">Extract PDF</a> |
-    <a href="formserahterima.html" style="color: #007bff; text-decoration;">Buat Form Serah Terima</a> |
-    <a href="merge.html" style="color: #007bff; text-decoration;">Merge PDF</a>
- </nav>
+  <nav>
+    <a href="index.html">Trackmate</a> |
+    <a href="Appsheet.html">AppSheet</a> |
+    <a href="formserahterima.html">Form Serah Terima</a> |
+    <a href="merge.html">Merge PDF</a>
+  </nav>
 
   <h1 style="text-align:center;">🔗 Merge PDF Kalian Disini</h1>
   <h4 style="text-align:center;">Pilih File PDF Yang Ingin Kalian Gabung Menjadi Satu File !</h4>
