--- a/Appsheet.html
+++ b/Appsheet.html
@@ -2,24 +2,27 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <title>Report Trackmate</title>
+  <title>Report Appsheet OCR</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <!-- ✅ Favicon ditambahkan di sini -->
+  
+  <!-- Favicon -->
   <link rel="icon" href="https://api.iconify.design/mdi:file-document.svg" type="image/svg+xml" />
 
-  <!-- Style dan ikon -->
+  <!-- Material Icons dan Style -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js"></script>
+  <script src="https://unpkg.com/tesseract.js@5.0.4/dist/tesseract.min.js"></script>
 </head>
 <body>
-   <nav>
+
+  <nav>
     <a href="index.html">Trackmate</a> |
     <a href="Appsheet.html">AppSheet</a> |
     <a href="formserahterima.html">Form Serah Terima</a> |
     <a href="merge.html">Merge PDF</a>
   </nav>
-  
 
   <h1>
     <span class="material-icons">assignment</span>
@@ -27,7 +30,7 @@
   </h1>
   <h2>Upload Form PDF Kalian Disini!</h2>
 
-  <label for="pdfFile" class="upload-label">
+<label for="pdfFile" class="upload-label">
   <span class="material-icons">picture_as_pdf</span> Pilih File PDF
 </label>
 <input type="file" id="pdfFile" accept="application/pdf" />
@@ -35,9 +38,7 @@
   <div id="output">Text akan muncul di sini...</div>
   <button id="copyBtn">Copy</button>
 
-  
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js"></script>
-  <script src="script_extract.js"></script>
+  <script src="Appsheet.js"></script>
 
 </body>
 </html>
