--- a/merge.html
+++ b/merge.html
@@ -14,9 +14,9 @@
 </head>
 <body>
   <nav>
-    <a href="index.html">Trackmate</a> |
-    <a href="Appsheet.html">AppSheet</a> |
-    <a href="formserahterima.html">Form Serah Terima</a> |
+    <a href="index.html">Trackmate</a>
+    <a href="Appsheet.html">AppSheet</a>
+    <a href="formserahterima.html">Form Serah Terima</a>
     <a href="merge.html">Merge PDF</a>
   </nav>
 
