--- a/Appsheet.html
+++ b/Appsheet.html
@@ -18,9 +18,9 @@
 <body>
 
   <nav>
-    <a href="index.html">Trackmate</a> |
-    <a href="Appsheet.html">AppSheet</a> |
-    <a href="formserahterima.html">Form Serah Terima</a> |
+    <a href="index.html">Trackmate</a>
+    <a href="Appsheet.html">AppSheet</a>
+    <a href="formserahterima.html">Form Serah Terima</a>
     <a href="merge.html">Merge PDF</a>
   </nav>
 
