--- a/formserahterima.html
+++ b/formserahterima.html
@@ -21,10 +21,10 @@
   
 </head>
 <body>
-   <nav>
-    <a href="index.html">Trackmate</a> |
-    <a href="Appsheet.html">AppSheet</a> |
-    <a href="formserahterima.html">Form Serah Terima</a> |
+  <nav>
+    <a href="index.html">Trackmate</a>
+    <a href="Appsheet.html">AppSheet</a>
+    <a href="formserahterima.html">Form Serah Terima</a>
     <a href="merge.html">Merge PDF</a>
   </nav>
  
