--- a/Appsheet.html
+++ b/Appsheet.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <title>Report Appsheet OCR</title>
+  <title>Report Appsheet</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
   <!-- Favicon -->
@@ -26,7 +26,7 @@
 
   <h1>
     <span class="material-icons">assignment</span>
-    Mager Bikin Laporan CM
+    Mager Report CM Appheet
   </h1>
   <h2>Upload Form PDF Kalian Disini!</h2>
 
