--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <h1>
     <span class="material-icons">assignment</span>
-    Mager Bikin Laporan CM
+    Mager Report CM Trackmate
   </h1>
   <h2>Upload Form PDF Kalian Disini!</h2>
 
