--- a/merge.html
+++ b/merge.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <title>Merge PDF CM Kanpus</title>
+  <title>Merge PDF</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- ✅ Favicon ditambahkan di sini -->
@@ -20,8 +20,8 @@
     <a href="merge.html">Merge PDF</a>
   </nav>
 
-  <h1 style="text-align:center;">🔗 Merge PDF Kalian Disini</h1>
-  <h4 style="text-align:center;">Pilih File PDF Yang Ingin Kalian Gabung Menjadi Satu File !</h4>
+  <h1 style="text-align:center;">🔗 Merge PDF</h1>
+  <h4 style="text-align:center;">Gabungkan PDF Kalian !</h4>
 <br>
 
   <div id="mergeContainer">
@@ -31,7 +31,7 @@
     <input type="file" id="mergeInput" accept="application/pdf" multiple style="margin-top:10px;">
 
     <div id="fileList">Belum ada file dipilih.</div>
-
+<br>
     <button id="mergeBtn">Gasss Merge PDF</button>
 
     <div id="downloadBar">✅ File PDF berhasil digabung dan sedang diunduh...</div>
