--- a/formserahterima.html
+++ b/formserahterima.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Buat Form Tanda Terima CM</title>
+  <title>Form Tanda Terima CM</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <!-- ✅ Favicon ditambahkan di sini -->
@@ -30,7 +30,7 @@
  
   <div class="container">
     <div class="form-box">
-  <h1>Buat Form Tanda Terima CM</h1>
+  <h1>Form Tanda Terima CM</h1>
 
   <div class="input-group">
     <label for="tanggalSerah">Input Tanggal Serah Terima:</label>
