--- a/Appsheet.html
+++ b/Appsheet.html
@@ -26,7 +26,7 @@
 
   <h1>
     <span class="material-icons">assignment</span>
-    Mager Report CM Appheet
+    Mager Report CM Appsheet
   </h1>
   <h2>Upload Form PDF Kalian Disini!</h2>
 
