--- a/Appsheet.html
+++ b/Appsheet.html
@@ -2,13 +2,10 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <title>Report Appsheet</title>
+  <title>BRIBOX KANPUS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-  <!-- Favicon -->
-  <link rel="icon" href="https://api.iconify.design/mdi:file-document.svg" type="image/svg+xml" />
-
-  <!-- Material Icons dan Style -->
+  <link rel="icon" href="/favicon.png" type="image/png" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
 
