--- a/index.html
+++ b/index.html
@@ -2,13 +2,9 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <title>Report Trackmate</title>
+  <title>BRIBOX KANPUS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <!-- ✅ Favicon ditambahkan di sini -->
-  <link rel="icon" href="https://api.iconify.design/mdi:file-document.svg" type="image/svg+xml" />
-
-  <!-- Style dan ikon -->
+  <link rel="icon" href="/favicon.png" type="image/png" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
 </head>
