--- a/formserahterima.html
+++ b/formserahterima.html
@@ -6,7 +6,7 @@
   <title>BRIBOX KANPUS</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <link rel="icon" href="/favicon.png" type="image/png" />
+  <link rel="icon" href="Public/favicon.png" type="image/png" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js"></script>
