--- a/Appsheet.html
+++ b/Appsheet.html
@@ -5,7 +5,7 @@
   <title>BRIBOX KANPUS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-  <link rel="icon" href="/favicon.png" type="image/png" />
+  <link rel="icon" href="Public/favicon.png" type="image/png" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
 
